<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2007-2008 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.


-->
<resources>

    <!--
         ***************************
	     About information
	     ***************************

    -->


    <!-- Automatically filled in by Launchpad: -->
    <string name="about_translators">translator-credits</string>

    <!--
         ***************************
	     Applicatio-specific strings
	     ***************************

    -->
    <string name="menu_bookmark">Bookmark</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="folder_name">Folder name</string>
    <string name="this_folder_is_empty">This folder is empty.</string>
    <string name="really_delete">Do you really want to delete %s?</string>

    <!-- Strings for a multi select feature -->
    <string name="really_delete_multiselect">Do you really want to delete %d files?</string>
    <string name="pick_title">File picker</string>

    <!-- Strings for details table -->
    <string name="details_type">Type</string>
    <string name="details_type_folder">Folder</string>
    <string name="details_type_file">File</string>
    <string name="details_type_other">Other</string>
    <string name="details_size">Size</string>
    <string name="details_permissions">Permissions</string>
    <string name="details_hidden">Hidden</string>
    <string name="details_lastmodified">Last Modified</string>
    <string name="details_yes">Yes</string>
    <string name="details_no">No</string>

    <!-- Construct a unique file name of a file called %s. -->
    <string name="copied_file_name">Copy of %s</string>

    <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
    <string name="copied_file_name_2">Copy %1$d of %2$s</string>
    <string name="error_generic">An error occurred: </string>
    <string name="error_media_scan">Could not change media scan settings.</string>
    <string name="send_not_available">No application available for sending.</string>
    <string name="application_not_available">No matching application installed.</string>

    <!--
         ***************************
	     Preferences
	     ***************************

    -->
    <!-- Menu item for Settings -->
    <string name="settings">Settings</string>

    <!-- Category for preferences. -->
    <string name="preference_advanced_features">Advanced features</string>
    <string name="preference_displayhiddenfiles_title">Display hidden files</string>
    <string name="preference_displayhiddenfiles_summary_on">Display hidden files</string>
    <string name="preference_displayhiddenfiles_summary_off">Hide hidden files</string>
    <string name="preference_sort_settings">Sort settings</string>
    <string name="preference_sortby">Sort by</string>
    <string name="preference_theme">Theme</string>
    <string name="preference_sortby_ascending">In ascending order</string>
    <string name="preference_sortby_ascending_summary_on">Sort in ascending order</string>
    <string name="preference_sortby_ascending_summary_off">Sort in descending order</string>
    <string name="media_library_added">Added to media library.</string>
    <string name="media_library_removed">Removed from media library.</string>
    <string name="preference_medialib_title">Media library action</string>
    <string name="preference_medialib_summary_on">Show media library action for folders</string>
    <string name="preference_medialib_summary_off">Hide media library action for folders</string>

    <string-array name="preference_sortby_names">
        <item>Name</item>
        <item>Size</item>
        <item>Last modified</item>
    </string-array>
    <string-array name="preference_theme_names">
        <item>Dir</item>
        <item>Grayscale</item>
        <item>Dark</item>
        <item>Holo</item>
    </string-array>

    <!--
         ***************************
   		 Strings for the 'Save as' feature
    	 ***************************

    -->
    <string name="saveas_no_file_picked">You haven\'t picked any file.</string>
    <string name="saveas_error">An error occured.</string>
    <string name="saveas_file_saved">File successfully saved!</string>

    <!--
         ***************************
             Strings for the 'Compressing' and 'Extracting' feature
          ***************************

    -->
    <string name="extracting">Extracting&#8230;</string>
    <string name="compressing">Compressing&#8230;</string>

    <!-- new menu strings -->
    <string name="menu_search">Search</string>
    <string name="menu_create_folder">Create folder</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_file_ops">Operations</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_move">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_compress">Compress</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_extract">Extract</string>
    <string name="menu_details">Details</string>
    <string name="menu_create_shortcut">Create shortcut</string>
    <string name="send_chooser_title">Send using:</string>
    <string name="menu_check_all">Select all</string>
    <plurals name="menu_copy_items_to">
        <item quantity="one">Copy %1$d item here</item>
        <item quantity="other">Copy %1$d items here</item>
    </plurals>
    <plurals name="menu_move_items_to">
        <item quantity="one">Move %1$d item here</item>
        <item quantity="other">Move %1$d items here</item>
    </plurals>
    <string name="menu_clear_clipboard">Clear clipboard</string>
    <string name="menu_remove_bookmark">Remove bookmark</string>
    <string name="menu_open_parent">Open containing folder</string>
    <string name="menu_add_to_media">Add to media library</string>
    <string name="menu_remove_from_media">Remove from media library</string>
    <string name="menu_share">Share</string>

    <!-- Notification plurals -->
    <string name="notif_copying_item">Copying %1$s to %2$s.</string>
    <string name="notif_no_space">Not enough memory available</string>
    <string name="notif_space_more">You need %1$s more.</string>
    <string name="notif_moving_item">Moving %1$s to %2$s.</string>
    <string name="notif_compressed_success">Compression successful</string>
    <string name="notif_compressed_fail">Compression failed</string>
    <string name="notif_compressing_into">Adding %1$s to %2$s.</string>
    <string name="notif_extracting_from">Extracting %1$s from %2$s.</string>
    <string name="notif_extracted_success">Extraction successful</string>
    <string name="notif_extracted_fail">Extraction failed</string>


    <!-- Multi selection action strings -->
    <string name="selected">selected</string>
    <string name="bookmark_empty">No bookmarks added.</string>

    <string name="bookmark_already_exists">This file is already bookmarked</string>

    <!-- Search related -->
    <string name="search_hint">Search files</string>
    <string name="query_error">Query error</string>
    <string name="search_empty">No matching files found!</string>

    <!-- icon content description -->
    <string name="item_icon">Item icon</string>

    <!-- list layout -->
    <string name="scanning">Scanning&#8230;</string>

    <!-- Dialogs -->
    <string name="delete_success">Successfully deleted</string>
    <string name="delete_failure">Some files not deleted</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="rename_success">Successfully renamed</string>
    <string name="rename_failure">Couldn\'t rename</string>
    <string name="loading">Loading&#8230;</string>
    <string name="create_dir_success">Successfully created directory</string>
    <string name="create_dir_failure">Couldn\'t create directory</string>
    <string name="compressed_file_name">Zip file name</string>
    <string name="file_exists">File exists</string>
    <string name="overwrite_question">Overwrite old file?</string>
    <string name="directory_pick">Select current directory</string>
    <string name="filename_hint">File name</string>
    <string name="choose_filename">File name can\'t be empty!</string>
    <string name="pick_button_default">Pick file</string>

    <!-- CopyHelper statuses -->
    <string name="copying">Copying&#8230;</string>
    <string name="copied">Successfully copied</string>
    <string name="copy_error">Some or all items couldn\'t be copied!</string>
    <string name="moving">Moving&#8230;</string>
    <string name="moved">Successfully moved</string>
    <string name="move_error">Some or all items couldn\'t be moved!</string>
    <string name="nothing_to_paste">Nothing to paste. Copy or cut files first.</string>

    <string name="preference_usebestmatch_title">File icons</string>
    <string name="preference_usebestmatch_summary_off">Use most recently installed app</string>
    <string name="preference_usebestmatch_summary_on">Use most suitable app</string>
    <string name="modified">Modified</string>
    <string name="about_forked_from">Forked from OI File Manager</string>
    <string name="about_created_by">Created by George Venios</string>
    <string name="about_thanks_oifm">Thanks to OpenIntents and OIFM contributors!</string>
    <string name="menu_about">@string/about</string>
    <string name="about">About</string>
    <string name="about_share">Share</string>
    <string name="about_shareSubject">Get Dir on Google Play</string>
    <string name="about_gplay">View on Google Play</string>
    <string name="about_contact">Seek support</string>
    <string name="about_beta">Join Google+ Community</string>
    <string name="about_contribute">View on Github</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>