<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_paste"
        android:alphabeticShortcut="p"
        android:showAsAction="always"
        android:menuCategory="container"
        android:orderInCategory="1"
        android:title="@string/menu_paste"
        android:icon="@drawable/ic_action_paste"/>
    <item
        android:id="@+id/menu_clear_clipboard"
        android:showAsAction="ifRoom"
        android:menuCategory="container"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_undo"
        android:title="@string/menu_clear_clipboard"/>
    <item
        android:id="@+id/menu_create_folder"
        android:alphabeticShortcut="c"
        android:icon="@drawable/ic_action_create_folder"
        android:showAsAction="ifRoom"
        android:menuCategory="container"
        android:orderInCategory="3"
        android:title="@string/menu_create_folder">
    </item>
    <item
        android:id="@+id/menu_media_scan_include"
        android:alphabeticShortcut="i"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="never"
        android:title="@string/menu_add_to_media"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_media_scan_exclude"
        android:alphabeticShortcut="e"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="never"
        android:title="@string/menu_remove_from_media"
        android:visible="false">
    </item>

</menu>