<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:menuCategory="container"
        android:orderInCategory="10"
        android:title="@string/menu_search">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="20"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_info"
        android:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="50"
        android:title="@string/menu_about" />

</menu>