<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2014 George Venios
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_content_padding"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Size -->
        <TextView
            android:id="@+id/details_size_text"
            style="@style/dialogDetailsPrimaryText"
            android:text="@string/details_size" />

        <TextView
            android:id="@+id/details_size_value"
            style="@style/dialogDetailsSecondaryText" />

        <!-- Type -->
        <TextView
            android:id="@+id/details_type_text"
            style="@style/dialogDetailsPrimaryText"
            android:text="@string/details_type" />

        <TextView
            android:id="@+id/details_type_value"
            style="@style/dialogDetailsSecondaryText" />

        <!-- Modification date -->
        <TextView
            android:id="@+id/details_lastmodified_text"
            style="@style/dialogDetailsPrimaryText"
            android:text="@string/details_lastmodified" />

        <TextView
            android:id="@+id/details_lastmodified_value"
            style="@style/dialogDetailsSecondaryText" />

        <!-- Visibility -->
        <TextView
            android:id="@+id/details_hidden_text"
            style="@style/dialogDetailsPrimaryText"
            android:text="@string/details_hidden" />

        <TextView
            android:id="@+id/details_hidden_value"
            style="@style/dialogDetailsSecondaryText" />

        <!-- Permissions -->
        <TextView
            android:id="@+id/details_permissions_text"
            style="@style/dialogDetailsPrimaryText"
            android:text="@string/details_permissions" />

        <TextView
            android:id="@+id/details_permissions_value"
            style="@style/dialogDetailsSecondaryText" />
    </LinearLayout>

</ScrollView>